--- a/jujugui/static/gui/src/app/assets/css/base.scss
+++ b/jujugui/static/gui/src/app/assets/css/base.scss
@@ -111,7 +111,7 @@ textarea {
 }
 
 body {
-    @extend %customize-scrollbar;
+    @include customize-scrollbar($white);
     overflow: hidden;
     height: 100%;
     margin-top: $navbar-height;
