--- a/jujugui/static/gui/src/app/components/machine-view/_machine-view.scss
+++ b/jujugui/static/gui/src/app/components/machine-view/_machine-view.scss
@@ -1,4 +1,5 @@
 .machine-view {
+    @include customize-scrollbar($canvas-background);
     @include fadeIn(.1s);
     position: absolute;
     top: $navbar-height;
